--- a/module-4/assets/index.html
+++ b/module-4/assets/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Taskinator</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./module-4/assets/css/style.css">
 </head>
 
 <body>
@@ -15,6 +15,17 @@
     <h1 class="page-title">Taskinator</h1>
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
+      <div class="form-group">
+        <input type="text" name="task-name" placeholder="Enter Task Name" />
+      </div>
+      <div class="form-group">
+        <select name="task-type" class="select-dropdown">
+          <option value="" disabled selected>Pick a task type</option>
+          <option value="Print">Print</option>
+          <option value="Web">Web</option>
+          <option value="Mobile">Mobile</option>
+        </select>
+      </div>
       <div class="form-group">
         <button class="btn" id="save-task" type="submit">Add Task</button>
       </div>
@@ -34,7 +45,7 @@
     &copy;2020 by Taskinator
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./module-4/assets/js/script.js"></script>
 </body>
 
 </html>
