--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Taskinator</title>
-  <link rel="stylesheet" href="./module-4/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -35,9 +35,7 @@
   <main class="page-content">
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-      <ul class="task-list" id="tasks-to-do">
-        <li class="task-item">A task is going to be added soon!</li>
-      </ul>
+      <ul class="task-list" id="tasks-to-do"></ul>
     </section>
   </main>
 
@@ -45,7 +43,7 @@
     &copy;2020 by Taskinator
   </footer>
 
-  <script src="./module-4/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
