--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
     </form>
   </header>
 
-  <main class="page-content" id="page-content"></main>
+  <main class="page-content" id="page-content">
+    <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
       <ul class="task-list" id="tasks-to-do"></ul>
     </section>
-    <!-- Tasks In Progress-->
+
+    <!-- Tasks In Progress -->
     <section class="task-list-wrapper">
-      <h2 class="list-title">Tasks in Progress</h2>
+      <h2 class="list-title">Tasks In Progress</h2>
       <ul class="task-list" id="tasks-in-progress"></ul>
     </section>
+
     <!-- Tasks Completed -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks Completed</h2>
